# cmake-init

./: CMakeLists.txt
src/: main.cpp
